feat: implement star rating system and AJAX comment submission

--- a/recipes/templates/recipes/_comment.html
+++ b/recipes/templates/recipes/_comment.html
@@ -3,11 +3,11 @@
     <small>{{ comment.created_at|timesince }} ago</small>
 
     <!-- Reply Form -->
-    <form class="reply-form" data-url="{% url 'recipes:add_reply' comment.recipe.slug comment.id %}" method="post" style="display:none;">
+    {% comment %} <form class="reply-form" data-url="{% url 'recipes:add_reply' comment.recipe.slug comment.id %}" method="post" style="display:none;">
         {% csrf_token %}
         {{ comment_form.content }}
         <button type="submit"><i class="fa-solid fa-paper-plane"></i></button>
-    </form>
+    </form> {% endcomment %}
     <button class="reply-toggle">Reply</button>
 
     <!-- Nested Replies -->
