--- a/recipes/static/recipes/css/recipe-details.css
+++ b/recipes/static/recipes/css/recipe-details.css
@@ -568,14 +568,31 @@
     color: #7a0606;
 }
 
-.slider {
-    width: 100%;
-    margin: 10px 0;
+.star-rating-input {
+    padding: 1px;
+    font-size: 1.4rem;
 }
 
-#slider-value {
-    font-weight: bold;
-    color: #7a0606;
+.star-rating-input .star {
+    color: rgb(6, 80, 6);
+    /* position: relative;
+    cursor: pointer;
+    display: inline-block; */
+    /* border: 4px solid blue; */
+}
+
+.star .star-filled {
+    color: rgb(6, 80, 6);
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 0.2s ease;
+}
+
+.star.hovered .star-filled,
+.star.selected .star-filled {
+    opacity: 1;
 }
 
 /* ===== BUTTONS ===== */
@@ -692,6 +709,30 @@
     margin: 0;
 }
 
+#pop-up {
+    display: none;
+    z-index: 1000000;
+    background: rgba(59, 29, 29, 0.589);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    width: 30%;
+    height: 50px;
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 4px;
+}
+
+#pop-up .close-modal {
+    color: white;
+    margin-right: 30px;
+}
+
 /* ===== RESPONSIVE DESIGN ===== */
 @media (max-width: 768px) {
     .recipe-grid {
@@ -724,5 +765,10 @@
         height: auto;
         max-width: 400px;
         align-self: center;
+    }
+
+    .cr-wrapper {
+        display: flex;
+        flex-direction: column;
     }
 }
